<resources>
    <string name="app_name">GarageDoorNew</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_house">HouseActivity</string>
    <string name="title_activity_soft_key">SoftKeyActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_door_configure">DoorConfigureActivity</string>
    <string name="garage_opener">Garage Opener</string>


    <!--New Account-->
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="retype_your_mail">Retype your email</string>
    <string name="required">Required</string>
    <string name="retype_your_password">Retype your password</string>


</resources>
